# generator-wombytes-cpp

./: .travis.yml  LICENSE.md  README.md  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
generators/app/: Application.json  ServerApplication.json  index.js
generators/app/templates/: .clang-format  .clang-tidy  CMakeLists.txt  CPPLINT.cfg  LICENSE.md  README.md  conanfile.txt
generators/app/templates/.devcontainer/: Dockerfile  devcontainer.json
generators/app/templates/Application/src/: Application.cpp  Application.hpp  CMakeLists.txt
generators/app/templates/Application/test/: CMakeLists.txt  main.cpp
generators/app/templates/ServerApplication/src/: Application.cpp  Application.hpp  CMakeLists.txt  HTTPRequestHandler.cpp  HTTPRequestHandler.hpp  HTTPRequestHandlerFactory.cpp  HTTPRequestHandlerFactory.hpp  main.cpp
generators/app/templates/ServerApplication/test/: Application.cpp
generators/app/templates/cmake/: CompilerWarnings.cmake  Conan.cmake
generators/app/templates/src/: CMakeLists.txt  main.cpp
generators/app/templates/test/: Application.cpp  CMakeLists.txt  main.cpp
test/: test.js
