add_library(HTTPRequestHandler HTTPRequestHandler.hpp HTTPRequestHandler.cpp)
target_link_libraries(HTTPRequestHandler PUBLIC CONAN_PKG::ms-gsl CONAN_PKG::poco)
target_include_directories(HTTPRequestHandler INTERFACE .)
target_compile_features(HTTPRequestHandler PUBLIC cxx_std_17)
if (${ENABLE_COVERAGE})
    target_compile_options(HTTPRequestHandler PRIVATE --coverage)
    target_link_options(HTTPRequestHandler PRIVATE --coverage)
endif()

add_library(HTTPRequestHandlerFactory HTTPRequestHandlerFactory.hpp HTTPRequestHandlerFactory.cpp)
target_link_libraries(HTTPRequestHandlerFactory PUBLIC HTTPRequestHandler CONAN_PKG::ms-gsl CONAN_PKG::poco)
target_include_directories(HTTPRequestHandlerFactory INTERFACE .)
target_compile_features(HTTPRequestHandlerFactory PUBLIC cxx_std_17)
if (${ENABLE_COVERAGE})
    target_compile_options(HTTPRequestHandlerFactory PRIVATE --coverage)
    target_link_options(HTTPRequestHandlerFactory PRIVATE --coverage)
endif()

add_library(Application Application.hpp Application.cpp)
target_link_libraries(Application PUBLIC HTTPRequestHandlerFactory CONAN_PKG::ms-gsl CONAN_PKG::poco)
target_include_directories(Application INTERFACE .)
target_compile_features(Application PUBLIC cxx_std_17)
if (${ENABLE_COVERAGE})
    target_compile_options(Application PRIVATE --coverage)
    target_link_options(Application PRIVATE --coverage)
endif()

add_executable(<%= projectName %> main.cpp)
target_link_libraries(<%= projectName %> PRIVATE Application)
if (${ENABLE_COVERAGE})
    target_compile_options(<%= projectName %> PRIVATE --coverage)
    target_link_options(<%= projectName %> PRIVATE --coverage)
endif()
